schema/testdata/validation_expression_lhs_nested_association_missing/schema.keel
model Customer {
  fields {
    orders Order[]
  }

  @permission(
    expression: customer.orders.ratingss.rated == true,
    actions: [get, update]
  )
}

model Order {
  fields {
    ratings Rating
    customer Customer
  }
}

model Rating {
  fields {
    rated Boolean
  }
}