schema/testdata/errors/attribute_expression_unresolvable_lhs.keel
model Post {
    fields {
        author Author
    }

    @permission(
        //expect-error:25:26:AttributeExpressionError:undefined field 'autho'
        expression: post.autho.name == "adam",
        actions: [get]
    )

    @permission(
        //expect-error:21:27:AttributeExpressionError:expression expected to resolve to type Boolean but it is Text
        expression: "dave",
        actions: [get]
    )

    @permission(
        //expect-error:21:37:AttributeExpressionError:expression expected to resolve to type Boolean but it is Text
        expression: post.author.name,
        actions: [get]
    )
}

model Author {
    fields {
        name Text
    }
}
